force-app/main/default/objects/Loyalty_Profile__c/Loyalty_Profile__c.object-meta.xml
<CustomObject>
    <label>Loyalty Profile</label>
    <nameField>
        <label>Loyalty Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>