force-app/main/default/objects/Loyalty_Profile__c/fields/Balance_Updated__c.field-meta.xml
<CustomField>
    <fullName>Balance_Updated__c</fullName>
    <label>Balance Updated</label>
    <type>DateTime</type>
</CustomField>