force-app/main/default/objects/Loyalty_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty Profiles</relationshipLabel>
    <relationshipName>Loyalty_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>