force-app/main/default/objects/Loyalty_Profile__c/fields/Points_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Points_Accrued__c</fullName>
    <label>Points Accrued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>