force-app/main/default/objects/Loyalty_Profile__c/fields/Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Points_Balance__c</fullName>
    <label>Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>