force-app/main/default/objects/Loyalty_Profile__c/fields/Points_Spent__c.field-meta.xml
<CustomField>
    <fullName>Points_Spent__c</fullName>
    <label>Points Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>