force-app/main/default/objects/Loyalty_Profile__c/fields/ProfileNumber__c.field-meta.xml
<CustomField>
    <fullName>ProfileNumber__c</fullName>
    <externalId>true</externalId>
    <label>ProfileNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>