force-app/main/default/objects/Loyalty_Profile__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>